# bot

./: alembic.ini  garbage.py  main.py  pyproject.toml
core/callback_data/: account_settings_callback_data.py  catalog_callback_data.py  close_callback_data.py  level_base_callback_data.py  navigation_callback_data.py  start_callback_data.py  system_callback_data.py
core/configs/: base_config.py  bot_config.py
core/databases/postgresql/: pg_config.py  pg_helper.py
core/databases/redis/: rd_config.py  rd_helper.py
core/databases/shared/: mixins.py
core/extra/: buttons.py  functions.py  validators.py
core/keyboards/: pagination_kb.py  phone_kb.py  skip_kb.py
core/keyboards/inline_keyboards/: about_kb.py  account_settings_kb.py  apps_kb.py  catalog_kb.py  close_kb.py  start_kb.py  system_kb.py
core/middlewares/: database_mw.py  throttling_mw.py
core/routers/: __init__.py  common.py
core/routers/account/: __init__.py  account_create_handlers.py  account_shared_handlers.py
core/routers/callback_handlers/: __init__.py  account_settings_kb_callback_handlers.py  catalog_kb_callback_handlers.py  close_kb_callback_handlers.py  navigation_kb_callback_handlers.py  start_kb_callback_handlers.py  system_kb_callback_handlers.py
core/routers/commands/: __init__.py  admin_commands.py  base_commands.py
core/schemas/: apps_sm.py
core/states/: account_create_states.py  account_settings_states.py  base_states.py  catalog_states.py
crud/: base.py  create.py  read.py  update.py
migrations/: env.py
migrations/versions/: 20.04.2025-8c62c8e0060e.py
(+14 files in other folders)
